# alpaca-trade-api-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: coverage.yml  dev.yml  release.yml
src/: api.rs  client.rs  enums.rs  lib.rs  models.rs  requests.rs
src/api/: account_api.rs  assets_api.rs  calenda_api.rs  clock_api.rs  corporate_action_api.rs  crypto_funding_api.rs  mod.rs  option_api.rs  order_api.rs  portfolio_api.rs  position_api.rs  utils.rs  watch_list_api.rs
src/models/: account.rs  assets.rs  calendar.rs  clock.rs  corporate_action.rs  crypto_funding.rs  enums.rs  error.rs  mod.rs  options.rs  orders.rs  position.rs  profiles.rs  utils.rs  watch_list.rs
tests/: account_api_tests.rs  api_tests.rs  assets_api_tests.rs  calenda_api_tests.rs  clock_api_tests.rs  corporate_action_api_tests.rs  crypto_funding_api_test.rs  option_api_tests.rs  order_api_tests.rs  portfolio_api_tests.rs  position_api_test.rs  requests_tests.rs  shared.rs  watch_list_tests.rs
