[package]
name = "alpaca-trade-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde", "clock", "now"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_with = "3.16.0"

[dev-dependencies]
httpmock = "0.8.2"

[lib]
name = "alpaca_trade_api_rust"
