[package]
name = "alpaca-trade-api-rust"
version = "0.0.1"
edition = "2024"
authors = ["Yue Li <li.yue.rex@gmail.com>"]
description = "The Alpaca trading api client implement in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/YueLiRex/alpaca-trade-api-rust"
homepage = "https://github.com/YueLiRex/alpaca-trade-api-rust"
keywords = ["finance", "trading", "finance-trading", "algorithmic-trading", "api-client"]
categories = ["finance", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.8"
reqwest-tracing = "0.5"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde", "clock", "now"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_with = "3.16.1"

[dev-dependencies]
httpmock = "0.8.2"

[lib]
name = "alpaca_trade_api_rust"

[profile.release]
opt-level = 3
panic = "abort"
strip = "symbols"
